[gd_scene load_steps=2 format=2]

[ext_resource path="res://resources/depot/Depot.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
mode = 1
cell_size = Vector2( 128, 64 )
format = 1

[node name="NorthFace" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="NorthFace"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="NorthFace/Area2D"]

[node name="EastFace" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="EastFace"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="EastFace/Area2D"]

[node name="SouthFace" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="SouthFace"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="SouthFace/Area2D"]

[node name="WestFace" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="WestFace"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="WestFace/Area2D"]

[connection signal="input_event" from="NorthFace/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="EastFace/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="SouthFace/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="input_event" from="WestFace/Area2D" to="." method="_on_Area2D_input_event"]
